Inicio do projeto Bate-Papo

--- a/web/templates/template.xhtml
+++ b/web/templates/template.xhtml
@@ -16,6 +16,11 @@
                     </b:navbarLinks>
                 </b:navBar>
             </h:form>
+            <h:panelGroup id="conteudo">
+                <ui:insert name="conteudo">
+
+                </ui:insert>
+            </h:panelGroup>
         </b:container>
     </h:body>
 </html>
