Inicio do projeto Bate-Papo

--- a/web/templates/template.xhtml
+++ b/web/templates/template.xhtml
@@ -13,6 +13,9 @@
                 <b:navBar brand="CHAT">
                     <b:navbarLinks>
                         <b:navLink value="Inicio" outcome="inicio" style="color: black"/>
+                        <b:dropMenu value="Chat Online">
+                            <b:navCommandLink value="Chat" ajax="false"/>
+                        </b:dropMenu> 
                     </b:navbarLinks>
                 </b:navBar>
             </h:form>
