Inicio do projeto Bate-Papo

--- a/web/templates/template.xhtml
+++ b/web/templates/template.xhtml
@@ -14,7 +14,7 @@
                     <b:navbarLinks>
                         <b:navLink value="Inicio" outcome="inicio" style="color: black"/>
                         <b:dropMenu value="Chat Online">
-                            <b:navCommandLink value="Chat" ajax="false"/>
+                            <b:navCommandLink value="Chat Online" outcome="chat"/>
                         </b:dropMenu> 
                     </b:navbarLinks>
                 </b:navBar>
